# plotextractor

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.py2  MANIFEST.in  README.md  README.rst  RELEASE-NOTES.rst  pyproject.toml  pytest.ini  requirements.txt  run-tests.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: build-and-release.yml  bump-and-publish.yml  test-python-2.yml  test-python-3.yml
docs/: conf.py  index.rst
plotextractor/: __init__.py  api.py  cli.py  config.py  converter.py  errors.py  extractor.py  getter.py  output_utils.py  version.py
tests/: __init__.py  test_api.py  test_converter.py  test_utils.py
